--- a/html/Contactanos.html
+++ b/html/Contactanos.html
@@ -14,25 +14,27 @@
 </head>
 <body>
   <header>
-
     <div class="grid-container-2">
-  
- 
       <a class="foto" href="/html/index.html" ><img class="imagen" src="/imagenes/logopractica1.png" alt=""></a>
-     <a href="/html/servicios.html" class="items sub-item">Servicios</a>
-     <a href="/html/SobreNosotros.html" class="items sub-item">Sobre Nosotros</a>
-     <a href="/html/Experiencias.html" class="items sub-item">Experiencias</a>
-     <a href="/html/Contactanos.html" class="contact">Contactanos</a>
+      <a href="/html/servicios.html" class="items sub-item" id="txt_header_servicios">Servicios</a>
+      <a href="/html/SobreNosotros.html" class="items sub-item" id="txt_header_nosotros">Sobre Nosotros</a>
+      <a href="/html/Experiencias.html" class="items sub-item" id="txt_header_experiencias">Experiencias</a>
+      <a href="/html/Contactanos.html" class="contact" id="txt_header_contactanos">Contactanos</a>
+     </div>
+     <div>
+      <button onclick="changeLanguage('ca')">Cat</button>
+      <button onclick="changeLanguage('es')">Esp</button>
+      <button onclick="changeLanguage('en')">Eng</button>
+    </div>
+    <script src="../javaScript/contactanos.js"></script>
+  </header> 
   
-  </div>
-  
-  </header>
   <div>
-    <h1 class="tituloForm">Contacte con nostoros rellenando este formulario</h1>
+    <h1 class="tituloForm" id="txt_titoloForm">Contacte con nostoros rellenando este formulario</h1>
   </div>
  <main>
   <section class="section1contact">
-    <div class="texto-contact">Contacta con nosotros a traves de este formulario y le contactaremos lo antes posible facilitandole varios presupuestos ajusatndose a sus ideas. </div>
+    <div class="texto-contact" id="txt_contacta_con_nosotros">Contacta con nosotros a traves de este formulario y le contactaremos lo antes posible facilitandole varios presupuestos ajusatndose a sus ideas. </div>
 <div class="divimagen"><img class="imagen-contacto" src="https://content.webtickets.co.za/ofentsehrspecialists/banner_all%20white%20image%202.jpg" alt=""></div>
   </section>
   <section class="section2contact">
@@ -40,24 +42,24 @@
    
         <form name="Rellene" method="POST" data-netlify="true">
           <div class="form-group">
-            <label for="first name">Nombre</label>
+            <label for="first name" id="txt_firstName">Nombre</label>
             <input type="text" id="first name" name="first-name">
           </div>
           <div class="form-group">
-            <label for="Last name">Apellido</label>
+            <label for="Last name" id="txt_lastName">Apellido</label>
           <input type="text" id="last name" name="last-name">
           </div>
           <div class="form-group">
-            <label for="email" class="is-required">Email</label>
+            <label for="email" class="is-required" id="txt_email">Email</label>
             <input type="email" id="Email" name="Email" required>
           </div>
           
           <div class="form-group">
-            <label for="welcome-massage" >Explicación</label>
-            <textarea name="welcome-message" id="welcome-massage" placeholder="Expliqui detalladament la festa"></textarea>
+            <label for="welcome-massage" id="txt_CExplicacion">Explicación</label>
+            <textarea name="welcome-message" id="welcome-massage"></textarea>
           </div>
           <div class="datetime-local form-group">
-            <label for="birthday" >Fecha de la fiesta</label>
+            <label for="birthday" id="txt_birthday">Fecha de la fiesta</label>
             <input type="date" id="birthday" name="password" >
           </div>
           <div class="form-group">
@@ -65,7 +67,7 @@
             <select name="city" id="city">
             <option value="Bdn">Badalona</option>
             <option value="Gra">Gracia</option>
-            <option value="Port">Port de Barclona</option>
+            <option value="Port" id="txt_portBarcelona">Port de Barclona</option>
             <option value="Hospi">Hospitalet</option>
             </select>
           </div>
@@ -80,14 +82,14 @@
     <li><img src="/imagenes/logopractica1.png" alt="" class="imagenfooter"></li>
   </ul>
   <ul class="secondfooter">
-    <li ><a class="itemsfooter" href="/html/servicios.html">Servicios</a> </li>
+    <li ><a class="itemsfooter" href="/html/servicios.html" id="txt_serviciosFooter">Servicios</a> </li>
     <span class="span"></span>
-    <li><a class="itemsfooter" href="/html/SobreNosotros.html">Sobre Nosotros</a></li>
+    <li><a class="itemsfooter" href="/html/SobreNosotros.html" id="txt_sobreNosotrosFooter">Sobre Nosotros</a></li>
     <span class="span"></span>
-    <li><a class="itemsfooter" href="/html/Experiencias.html">Experiencias</a></li>
+    <li><a class="itemsfooter" href="/html/Experiencias.html" id="txt_experienciasFooter">Experiencias</a></li>
   </ul>
   <ul class="lastcolumnfooter">
-    <li><a href="/html/Contactanos.html" class="contactfooter">Contactanos</a></li>
+    <li><a href="/html/Contactanos.html" class="contactfooter" id="txt_contactanosFooter">Contactanos</a></li>
   </ul>
   
 </footer>
