--- a/html/servicios.html
+++ b/html/servicios.html
@@ -14,13 +14,13 @@
   <body>
     <header>
       <div class="grid-container-2">
-        <a class="foto" href="/html/index.html" ><img class="imagen" src="/imagenes/logopractica1.png" alt=""></a>
+        <a class="foto" href="/index.html" ><img class="imagen" src="/imagenes/logopractica1.png" alt=""></a>
         <a href="/html/servicios.html" class="items sub-item" id="txt_header_servicios">Servicios</a>
         <a href="/html/SobreNosotros.html" class="items sub-item" id="txt_header_nosotros">Sobre Nosotros</a>
         <a href="/html/Experiencias.html" class="items sub-item" id="txt_header_experiencias">Experiencias</a>
         <a href="/html/Contactanos.html" class="contact" id="txt_header_contactanos">Contactanos</a>
       </div>  
-        <div>
+        <div class="botonesidioma">
           <button onclick="changeLanguage('ca')">Cat</button>
           <button onclick="changeLanguage('es')">Esp</button>
           <button onclick="changeLanguage('en')">Eng</button>
