--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </section>
 
   </main>
-<a href="servicios.html" class="b-see-more" id="txt_ver_mas">VER MÁS</a>
+<a href="./html/servicios.html" class="b-see-more" id="txt_ver_mas">VER MÁS</a>
   <footer class="footer">
     <ul class="lastcolumnfooter">
       <li><img src="/imagenes/logopractica1.png" alt="" class="imagenfooter"></li>
